--- a/auror/package.json
+++ b/auror/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "^6.3.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
